objects/Message__c.object
<CustomObject>
    <description>Logs for Allscripts leads</description>
    <label>Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the lead was created or updated successfully</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_XML__c</fullName>
        <description>XML payload that was used to create the lead from Allscripts</description>
        <label>Body XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Response from the API</description>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>